--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
   position: fixed;
   z-index: 100;
   background-color: white;
-  width: 100%;">
+  width: 100%;
+  height: 53px;">
       <button type="button" class="navbar-toggle collapsed">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -40,7 +41,7 @@
       <a href="./index.html" class="navbar-brand">Nohces</a>
     </div>
 
-    <nav class="sidebar">
+    <nav id="sidebar" class="sidebar">
       <div class="navbar-collapse" id="navbar-collapse">
         <div class="site-header hidden-xs">
           <a class="site-brand" href="./index.html" title="">
@@ -51,11 +52,11 @@
             tempor.</p>
         </div>
         <ul class="nav" style="position: fixed;">
-          <li><a href="#home" title="">Home</a></li>
-          <li><a href="#about" title="">About</a></li>
-          <li><a href="#projects" title="">Projects</a></li>
-          <li><a href="#services" title="">Services</a></li>
-          <li><a href="#contact" title="">Contact</a></li>
+          <li><a id="home-href" href="#home" title="">Home</a></li>
+          <li><a id="about-href" href="#about" title="">About</a></li>
+          <li><a id="project-href" href="#project" title="">Projects</a></li>
+          <li><a id="service-href" href="#service" title="">Services</a></li>
+          <li><a id="contact-href" href="#contact" title="">Contact</a></li>
 
         </ul>
 
@@ -116,7 +117,7 @@
     </div>
 
     <!-- PORTOFOLIO -->
-    <div id="projects" class="hero-full-wrapper">
+    <div id="project" class="hero-full-wrapper">
       <div class="grid">
         <div class="gutter-sizer"></div>
         <div class="grid-sizer"></div>
@@ -221,7 +222,7 @@
     </div>
 
     <!-- SERVICE -->
-    <div id="services" class="row">
+    <div id="service" class="row">
       <div class="col-xs-12 section-container-spacer">
         <h1>Services</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -333,6 +334,41 @@
       navbarToggleSidebar();
       navActivePage();
     });
+
+    const Sidebar = document.getElementById('sidebar');
+
+    const HomeHref = document.getElementById('home-href');
+    const AboutHref = document.getElementById('about-href');
+    const ProjectHref = document.getElementById('project-href');
+    const ServiceHref = document.getElementById('service-href');
+    const ContactHref = document.getElementById('contact-href');
+
+    function closeSidebarIfOpen() {
+      if (Sidebar.classList.contains('open')) {
+        Sidebar.classList.remove('open');
+      }
+    }
+
+    HomeHref.addEventListener('click', () => {
+      closeSidebarIfOpen();
+    });
+
+    AboutHref.addEventListener('click', () => {
+      closeSidebarIfOpen();
+    });
+
+    ProjectHref.addEventListener('click', () => {
+      closeSidebarIfOpen();
+    });
+
+    ServiceHref.addEventListener('click', () => {
+      closeSidebarIfOpen();
+    });
+
+    ContactHref.addEventListener('click', () => {
+      closeSidebarIfOpen();
+    });
+
   </script>
 
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
