update Project Section

--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
 
     <!-- PORTOFOLIO -->
     <div id="project" class="hero-full-wrapper">
+      <div class="" style="margin-bottom: 50px;">
+        <h1>Projects</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+          tempor incididunt ut labore et dolore magna aliqua. <br>Ut enim ad minim veniam,
+          quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+          consequat.</p>
+      </div>
+
       <div class="grid">
         <div class="gutter-sizer"></div>
         <div class="grid-sizer"></div>
